# c-Matrix-Class

./: CMakeLists.txt
src/: Matrix.cpp  Matrix.hpp  main.cpp
test/: matrix_tests.cpp
